<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_baseline_home_24">
        </item>

        <item
            android:id="@+id/nav_search"
            android:title="@string/nav_search"
            android:icon="@drawable/ic_baseline_search_24">
        </item>

        <item
            android:id="@+id/nav_rank"
            android:title="@string/nav_rank"
            android:icon="@drawable/ic_baseline_equalizer_24">
        </item>

        <item
            android:id="@+id/nav_add"
            android:title="@string/nav_add"
            android:icon="@drawable/ic_baseline_add_circle_outline_24">
        </item>

        <item
            android:id="@+id/nav_bookmark"
            android:title="Book Marks"
            android:icon="@drawable/ic_baseline_bookmark_24">
        </item>

    </group>
    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_my_profile"
                android:title="@string/nav_my_profile"
                android:icon="@drawable/ic_baseline_person_24">
            </item>

            <item
                android:id="@+id/nav_change_password"
                android:title="@string/nav_change_password"
                android:icon="@drawable/ic_baseline_lock_24">
            </item>
        </menu>
    </item>
</menu>